fix(explore): show rank number to the left of each card at 85% visibility

--- a/src/components/explore/TrendingSection.scss
+++ b/src/components/explore/TrendingSection.scss
@@ -30,12 +30,19 @@
     padding-top: var(--space-2);
     margin-top: calc(-1 * var(--space-2));
     padding-bottom: var(--space-2);
+    padding-left: 50px;
+    scroll-padding-left: 50px;
     margin-right: -$padding-horizontal;
     scroll-snap-type: x mandatory;
     scrollbar-width: none;
     -webkit-overflow-scrolling: touch;
 
     &::-webkit-scrollbar { display: none; }
+
+    @include from($bp-md) {
+      padding-left: 65px;
+      scroll-padding-left: 65px;
+    }
   }
 
   &__item {
@@ -57,8 +64,8 @@
 
   &__rank {
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 0;
+    transform: translateX(-85%);
     bottom: 8px;
     font-family: var(--font-editorial);
     font-size: 120px;
